--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Esto es una prueba</div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
