--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <p>https://twitter.com/JP_GHIBLI</p>
       <p>https://www.ghibli-museum.jp</p>
     </footer>
-    <div id="root"></div>
+    <div id="root">Rosa</div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
