se agrego index y css

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,119 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <!--Esta es la cabecera de una página o un bloque de contenido-->
+      <div class="contenedorPrincipal">
+          <div>
+          </div>
+          <div>
+              <!--<input type="text" placeholder="Buscar pelicula">-->
+              <select name="languague" class="selector">
+                  <option value="pt">Ponyo</option>
+                  <option value="id">Mar</option>
+                  <option value="es" selected="">Tororo</option>
+                  <option value="it">El jardin</option>
+                  <option value="de">Marnie</option>
+                  <option value="fr">El castillo</option>
+                  <option value="ru">Ponyo</option>
+                  <option value="pl">viaje </option>
+                  <option value="tr">Tororo</option>
+                  <option value="ro">EL gato</option>
+                  <option value="th">Marnie</option>
+                  <option value="ar">Ponyo</option>
+                  <option value="ko">Ponyo</option>
+                  <option value="ja">Marnie</Marquee></option>
+                  <option value="zh-TW">Tororo</option>
+                  <option value="zh-CN">简体中文</option>
+              </select>
+          </div>
+      </div>
+        <nav id="opciones">
+          <select name="os0" class="selector">
+              <option value="a">1985</option>
+              <option value="b">1986</option>
+              <option value="c">1987</option>
+              <option value="d">1988</option>
+              </select>
+
+              <!--<select name="languague" class="selector">
+                  <option value="pt">Ponyo</option>
+                  <option value="id">Mar</option>
+                  <option value="es" selected="">Tororo</option>
+                  <option value="it">El jardin</option>
+                  <option value="de">Marnie</option>
+                  <option value="fr">El castillo</option>
+                  <option value="ru">Ponyo</option>
+                  <option value="pl">viaje </option>
+                  <option value="tr">Tororo</option>
+                  <option value="ro">EL gato</option>
+                  <option value="th">Marnie</option>
+                  <option value="ar">Ponyo</option>
+                  <option value="ko">Ponyo</option>
+                  <option value="ja">Marnie</Marquee></option>
+                  <option value="zh-TW">Tororo</option>
+                  <option value="zh-CN">简体中文</option>
+              </select>-->
+              <select name="os0" class="selector">
+                  <option value="a">99%</option>
+                  <option value="b">86%</option>
+                  <option value="c">17%</option>
+                  <option value="d">98</option>
+                  </select>
+                  <select name="languague" class="selector">
+                      <option value="pt">Pao</option>
+                      <option value="id">日本语</option>
+                      <option value="es" selected="">Collete</option>
+                      <option value="it">日本语</option>
+                      <option value="de">Alma</option>
+                      <option value="fr">日本语</option>
+                      <option value="ru">Ofe</option>
+                      <option value="pl">日本语</option>
+                      <option value="tr">Nachi‎</option>
+                      <option value="ro">日本语‎</option>
+                      <option value="th">Edith</option>
+                      <option value="ar">日本语ة</option>
+                      <option value="ko">Diana</option>
+                      <option value="ja">日本语</option>
+                      <option value="zh-TW">Flor</option>
+                      <option value="zh-CN">日本语</option>
+                  </select>
+
+              
+          <!--Esta es la barra de navegación principal del sitio-->
+          <!--<ul>
+              <li><a class="active" href="#año">AÑO</a></li>
+              <li><a href="#titulo">TITULO</a></li>
+              <li><a href="#score">SCORE</a></li>
+              <li><a href="#director">DIRECTOR</a></li>
+            </ul>-->
+        </nav>
+      </header>
+      <main>
+       <section>
+          <div class="flex-container">
+              <div><figure>
+                  <img src="posterponyo.jpg" alt="" style="width:100%">
+                  <!--<figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>-->
+                </figure>1</div>
+              <div>2</div>
+              <div>3</div>  
+            </div>
+      <!--Esta es una sección de contenido del bloque principal (MAIN)-->
+                  <!--<article>
+      Esto es un artículo del sitio
+                 </article>
+                 <article>
+      Esto sería un segundo artículo
+                 </article>-->
+        </section>
+      </main>
+      <!--<aside>
+      El <aside> contiene información accesoria, que no suele añadir un valor significativo a la temática del sitio. Por ejemplo, es habitual usar para la barra lateral con una serie de banners o widgets sociales.
+      </aside>-->
+      <footer >
+      <div id="piePagina"><p > ESTUDIO GHIBLI  - 1985  - TOKIO*JAPON</p></div>
+      </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
