--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Hola Mundo!</h1>
+    <p>Este es un párrafo</p>
+
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
