Color de fondo y título temporal

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hola Mundo!</h1>
-    <p>Este es un párrafo</p>
+    <header>
 
+    </header>
+    <main>
+      <h1>Studio Ghibli</h1>
+      
+    </main>  
+    <footer></footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
