Cambios pequeños HTML CSS

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <header>
-
+      <h1>Studio Ghibli</h1>
     </header>
     <main>
-      <h1>Studio Ghibli</h1>
-      
+      <section class="container" id="first">
+        
+      </section>
     </main>  
     <footer></footer>
     <div id="root"></div>
