cambios en la exportacion de de datos

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
+</head>
+
+<body>
+
+    <main>
+        <header>Pokémon Kanto</header>
+        <article id=pokemonImage></article>
+
+    </main>
+
     <script src="main.js" type="module"></script>
-  </body>
+</body>
+
 </html>
