--- a/src/index.html
+++ b/src/index.html
@@ -2,38 +2,38 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Data Lovers</title>
-  <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/188/188993.png" />
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8">
+    <title>Data Lovers</title>
+    <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/188/188993.png" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="logo">
-        <img id="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png" alt="LogoPokemon">
-      </div>
-      <nav class="menu">
-        <a href="index.html">Inicio</a>
-        <a href="https://pokemongolive.com/es_mx/">Juego Pokémon Go</a>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <div class="seleccion">
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <img id="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png" alt="LogoPokemon">
+            </div>
+            <nav class="menu">
+                <a href="index.html">Inicio</a>
+                <a href="https://pokemongolive.com/es_mx/">Pokémon Go</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="seleccion">
 
-      <div id="selectorType">Ver pokémon:</div>
+            <div id="selectorType">Ver pokémon:</div>
 
-      <div id="selectorOrder">Ordenar por:</div>
+            <div id="selectorOrder">Ordenar por:</div>
 
-    </div>
+        </div>
 
-  </main>
+    </main>
 
 
-  <!--<div id="root"></div>-->
-  <script src="main.js" type="module"></script>
+    <!--<div id="root"></div>-->
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
