Mostramos datos pokemon en html y agregamos fuente a la letra

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap"
+        rel="stylesheet">
     <title>Data Lovers</title>
     <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/188/188993.png" />
     <link rel="stylesheet" href="style.css" />
@@ -12,7 +17,8 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img id="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png" alt="LogoPokemon">
+                <img id="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png"
+                    alt="LogoPokemon">
             </div>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
@@ -22,15 +28,14 @@
     </header>
     <main>
         <div class="seleccion">
-
+            <h2>¡¡Da click sobre el pokémon para ver más características!! </h2>
             <div id="selectorType">Ver pokémon:</div>
 
             <div id="selectorOrder">Ordenar por:</div>
 
         </div>
-
     </main>
-
+    <div id="containerPokemon"></div>
 
     <!--<div id="root"></div>-->
     <script src="main.js" type="module"></script>
