Creación de ip para div e imagen y estilo en css

--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,17 @@
         </div>
     </header>
     <main>
+
         <div class="seleccion">
-            <h2>¡¡Da click sobre el pokémon para ver más características!! </h2>
+            <h2 id="instructions">¡¡Da click sobre el pokémon para ver más características!! </h2>
             <div id="selectorType">Ver pokémon:</div>
 
             <div id="selectorOrder">Ordenar por:</div>
 
         </div>
     </main>
-    <div id="containerPokemon"></div>
+    <section id="containerPokemon"></section>
+    <!--  <div id="containerPokemon"></div>-->
 
     <!--<div id="root"></div>-->
     <script src="main.js" type="module"></script>
