--- a/src/index.html
+++ b/src/index.html
@@ -33,15 +33,15 @@
         <div id="main">
             <div class="seleccion">
                 <h2 id="instructions">¡¡Da click sobre el pokémon para ver más características!! </h2>
-                <div id="selectorType">Ver pokémon:</div>
-                <div id="selectorOrder">Ordenar por:</div>
+                <div id="selectorType">Ver pokémon tipo:</div>
+                <div id="selectorRegion">Ver generación:</div>
             </div>
         </div>
     </main>
 
     <!--Sección que contiene pokemon, mostrando imagen, número y nombre-->
     <section id="containerPokemon"></section>
-    <!--  <div id="containerPokemon"></div>-->
+
 
     <!--<div id="root"></div>-->
     <script src="main.js" type="module"></script>
