Cambios antes de sort de Alicia

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
                 <h2 id="instructions">¡¡Da click sobre el pokémon para ver más características!! </h2>
                 <div id="selectorType">Ver pokémon tipo:</div>
                 <div id="selectorRegion">Ver generación:</div>
+                <div id="selectorSort">Ordenar por:</div>
+
             </div>
         </div>
     </main>
