cambios en la función soft y se agregaron clases en html

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img id="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png"
+                <img class="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png"
                     alt="LogoPokemon">
             </div>
             <nav class="menu">
@@ -30,12 +30,12 @@
 
     <!--Main contiene instrucciones,sección de busqueda y orden-->
     <main>
-        <div id="main">
+        <div class="main">
             <div class="seleccion">
-                <h2 id="instructions">¡¡Da click sobre el pokémon para ver más características!! </h2>
-                <div id="selectorType">Ver pokémon tipo:</div>
-                <div id="selectorRegion">Ver generación:</div>
-                <div id="selectorSort">Ordenar por:</div>
+                <h2 class="instructions">¡¡Da click sobre el pokémon para ver más características!! </h2>
+                <div class="selector" id="selectorType">Ver pokémon tipo:</div>
+                <div class="selector" id="selectorRegion">Ver generación:</div>
+                <div class="selector" id="selectorSort">Ordenar por:</div>
 
             </div>
         </div>
@@ -44,8 +44,6 @@
     <!--Sección que contiene pokemon, mostrando imagen, número y nombre-->
     <section id="containerPokemon"></section>
 
-
-    <!--<div id="root"></div>-->
     <script src="main.js" type="module"></script>
 </body>
 
