--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap" rel="stylesheet">
     <title>Data Lovers</title>
     <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/188/188993.png" />
     <link rel="stylesheet" href="style.css" />
@@ -19,9 +17,9 @@
     <header class="header">
         <div class="container logo-nav-container">
             <img class="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png" alt="LogoPokemon">
-            <span class="menu-icon"><img src="https://image.flaticon.com/icons/png/512/188/188966.png"></span>
-            <div class="navigation">
-                <ul>
+            <span class="menu-icon" id="menuBTN"><img src="https://image.flaticon.com/icons/png/512/188/188966.png"></span>
+            <div class="navigation" id="filtros">
+                <ul id="navegacion">
                     <li>
                         <div class="selector" id="selectorType">Ver pokémon tipo: </div>
                     </li>
@@ -55,8 +53,7 @@
             <p>Creado por Alicia y Estefany en Laboratoria 011 Mex</p>
         </div>
     </footer>
-    <!--Enlace de jquery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="main.js" type="module"></script>
 </body>
 
