--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap"
+        rel="stylesheet">
     <title>Data Lovers</title>
     <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/188/188993.png" />
     <link rel="stylesheet" href="style.css" />
@@ -17,7 +19,8 @@
     <header class="header">
         <div class="container logo-nav-container">
             <img class="logoImg" src="https://cdn2.bulbagarden.net/upload/4/4b/Pok%C3%A9dex_logo.png" alt="LogoPokemon">
-            <span class="menu-icon" id="menuBTN"><img src="https://image.flaticon.com/icons/png/512/188/188966.png"></span>
+            <span class="menu-icon" id="menuBTN"><img
+                    src="https://image.flaticon.com/icons/png/512/188/188966.png"></span>
             <div class="navigation" id="filtros">
                 <ul id="navegacion">
                     <li>
@@ -47,7 +50,7 @@
         <section id="containerPokemon"></section>
     </main>
 
-    <!--Pié de página de la página-->
+    <!--Footer de la página-->
     <footer class="footer">
         <div class="container">
             <p>Creado por Alicia y Estefany en Laboratoria 011 Mex</p>
