--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Chakra+Petch:wght@400;500&display=swap" rel="stylesheet">
     <title>Data Lovers</title>
     <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/188/188993.png" />
     <link rel="stylesheet" href="style.css" />
