--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 <option value="flying">VOLADOR</option>
             </select>
 
-            <select name="Srarity" id="Srarity">
+            <select name="Srarity" id="rarity">
                 <option disabled selected>RAREZA</option>
                 <option value="normal">NORMAL</option>
                 <option value="legendary">LEGENDARIO</option>
